--- a/com.xk.fastappinstance/src/manifest.json
+++ b/com.xk.fastappinstance/src/manifest.json
@@ -35,7 +35,11 @@
       "Profile": {
         "component": "profile",
         "path": "/profile"
-      }
+      },
+      "HomeInner": {
+        "component": "homeinner",
+        "path": "/homeinner"
+      } 
     }
   },
   "display": {
